--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,65 @@
+/*** Fonts ***/
+@font-face {
+  font-family: "Aveta-Demo";
+  src: url(../font/AvertaDemo-Regular.otf);
+  font-weight: 400;
+}
+@mixin media($screen) {
+    @media only screen and (min-width: $screen) {
+        @content;
+    }
+}
+/*** Variales ***/
+$sm: "375px";
+$lg: "1440px";
+$aveta-demo: "Aveta-Demo";
+$black: #0000;
+
+/*** global Style ***/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: $aveta-demo;
+  font-weight: 400;
+}
+button {
+  background-color: none;
+  border: none;
+}
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+
+/*** Common Class ***/
 h1{
-    font-size: 20px;
+    font-size: 24px;
+}
+h3{
+    font-size: 18px;
+}
+.common-pera{
+    font-size: 14px;
+}
+.container{
+    max-width: 335px;
+    margin: auto;
+}
+
+@include media($sm) {
+    h1{
+        font-size: 40px;
+    }
+    h3{
+        font-size: 24px;
+    }
+    .common-pera{
+        font-size: 16px;
+    }
+    .container{
+        max-width: 1200px;
+    }
 }
