--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,59 @@ h3 {
     max-width: 1200px;
   }
 }
+header {
+  min-height: 100vh;
+}
+header .navber {
+  padding: 20px 0px;
+}
+header .navber .container .nav-head {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+header .navber .container .nav-head img {
+  width: 80px;
+}
+header .navber .container .nav-head button span {
+  font-size: 16px;
+}
+header .navber .container .link-wrap {
+  display: none;
+}
+
+@media only screen and (min-width: 1440px) {
+  header {
+    min-height: 100vh;
+  }
+  header .navber {
+    padding: 42px 0px 0px 0px;
+  }
+  header .navber .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  header .navber .container .nav-head img {
+    width: 120px;
+  }
+  header .navber .container .nav-head button {
+    display: none;
+  }
+  header .navber .container .link-wrap {
+    display: block;
+  }
+  header .navber .container .link-wrap ul {
+    display: flex;
+    align-items: center;
+    column-gap: 60px;
+  }
+  header .navber .container .link-wrap ul li a {
+    font-size: 16px;
+    color: black;
+  }
+}
 footer .container {
   padding: 40px 0px 20px 0px;
   border-top: 1px solid #e4e4e4;
