--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -55,6 +55,7 @@ footer {
           row-gap: 16px;
 
           h5 {
+            font-weight: bold;
             margin-bottom: 8px;
             font-size: 18px;
           }
