complete responsive out client sec

--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ h3 {
     font-size: 20px;
   }
 }
+/*** Header ***/
 header {
   min-height: 100vh;
 }
@@ -163,6 +164,81 @@ header main .main-img img {
     right: 0px;
     max-width: 754px;
     margin: 0px;
+  }
+}
+/*** Our Client ***/
+#our-client {
+  margin-top: 30px;
+}
+#our-client .container {
+  display: flex;
+  flex-flow: column wrap;
+  row-gap: 30px;
+}
+#our-client .container .content {
+  padding-right: 80px;
+}
+#our-client .container .content h1 {
+  margin-bottom: 10px;
+}
+#our-client .container .clients {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  column-gap: 50px;
+  row-gap: 20px;
+}
+#our-client .container .clients .img-wrap img {
+  width: 100%;
+}
+#our-client .container .clients .img-wrap:nth-child(1) {
+  width: 100px;
+}
+#our-client .container .clients .img-wrap:nth-child(2) {
+  width: 110px;
+}
+#our-client .container .clients .img-wrap:nth-child(3) {
+  width: 110px;
+}
+#our-client .container .clients .img-wrap:nth-child(4) {
+  width: 90px;
+}
+
+@media only screen and (min-width: 1440px) {
+  #our-client {
+    margin-top: 40px;
+  }
+  #our-client .container {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: space-between;
+    row-gap: 0px;
+  }
+  #our-client .container .content {
+    width: 320px;
+    padding-right: 0px;
+  }
+  #our-client .container .content h1 {
+    margin-bottom: 17px;
+  }
+  #our-client .container .clients {
+    display: flex;
+    flex-flow: row wrap;
+    column-gap: 60px;
+    row-gap: 0px;
+  }
+  #our-client .container .clients .img-wrap:nth-child(1) {
+    width: 150px;
+  }
+  #our-client .container .clients .img-wrap:nth-child(2) {
+    width: 166px;
+  }
+  #our-client .container .clients .img-wrap:nth-child(3) {
+    width: 166px;
+  }
+  #our-client .container .clients .img-wrap:nth-child(4) {
+    width: 141px;
   }
 }
 footer .container {
