--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,75 @@ header main .main-img img {
     width: 141px;
   }
 }
+/*** Agency Since ***/
+#agency-since {
+  padding: 70px 0px;
+}
+#agency-since .container {
+  display: flex;
+  flex-flow: column wrap;
+  row-gap: 30px;
+}
+#agency-since .container .agency-img {
+  width: 335px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("../images/agency-since-img.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  box-shadow: 10px 20px 50px rgba(0, 0, 0, 0.15);
+  border-radius: 32px;
+}
+#agency-since .container .agency-img button {
+  width: 50px;
+  height: 50px;
+  background-color: #2639ed;
+  border-radius: 50%;
+}
+#agency-since .container .agency-img button span {
+  font-size: 16px;
+  color: white;
+}
+#agency-since .container .content h1 {
+  margin-bottom: 20px;
+  display: flex;
+  flex-flow: column wrap;
+}
+#agency-since .container .content h1 span {
+  font-weight: bold;
+}
+
+@media only screen and (min-width: 1440px) {
+  #agency-since {
+    padding: 140px 0px;
+  }
+  #agency-since .container {
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+    row-gap: 0px;
+  }
+  #agency-since .container .agency-img {
+    width: 550px;
+    height: 372px;
+  }
+  #agency-since .container .agency-img button {
+    width: 78px;
+    height: 78px;
+  }
+  #agency-since .container .agency-img button span {
+    font-size: 30px;
+  }
+  #agency-since .container .content {
+    width: 560px;
+  }
+  #agency-since .container .content h1 {
+    margin-bottom: 40px;
+  }
+}
 footer .container {
   padding: 40px 0px 20px 0px;
   border-top: 1px solid #e4e4e4;
