--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,90 @@ header main .main-img img {
     margin-bottom: 40px;
   }
 }
+#subscribe {
+  margin: 50px 0px 60px 0px;
+}
+#subscribe .container .content-wrap {
+  max-width: 335px;
+  background-color: #f4f9ff;
+  border-radius: 20px;
+  padding: 20px 15px;
+}
+#subscribe .container .content-wrap .content {
+  display: flex;
+  flex-flow: column wrap;
+  row-gap: 20px;
+}
+#subscribe .container .content-wrap .content div:nth-child(1) h1 {
+  margin-bottom: 10px;
+}
+#subscribe .container .content-wrap .content div:nth-child(2) {
+  width: 300px;
+  height: 45px;
+  padding: 5px 10px;
+  display: flex;
+  justify-content: space-between;
+  background: #ffffff;
+  border: 1px solid #f1f1f1;
+  box-shadow: 10px 20px 50px rgba(0, 0, 0, 0.15);
+  border-radius: 30px;
+  align-items: center;
+}
+#subscribe .container .content-wrap .content div:nth-child(2) input {
+  border: none;
+  outline: none;
+}
+#subscribe .container .content-wrap .content div:nth-child(2) button {
+  padding: 10px 20px;
+}
+#subscribe .container .content-wrap .content div:nth-child(2) button a {
+  font-size: 12px;
+}
+#subscribe .container .content-wrap .right-bg {
+  display: none;
+}
+
+@media only screen and (min-width: 1440px) {
+  #subscribe {
+    margin: 92px 0px 126px 0px;
+  }
+  #subscribe .container .content-wrap {
+    max-width: 1197px;
+    background-color: #f4f9ff;
+    border-radius: 75px;
+    padding: 98px 98px 99px 92px;
+  }
+  #subscribe .container .content-wrap .content {
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #subscribe .container .content-wrap .content div:nth-child(1) h1 {
+    margin-bottom: 17px;
+  }
+  #subscribe .container .content-wrap .content div:nth-child(2) {
+    width: 480px;
+    height: 80px;
+    border-radius: 60px;
+    justify-content: space-between;
+    column-gap: 57px;
+  }
+  #subscribe .container .content-wrap .content div:nth-child(2) input {
+    border: none;
+    outline: none;
+  }
+  #subscribe .container .content-wrap .content div:nth-child(2) ::placeholder {
+    font-size: 16px;
+    color: #565656;
+  }
+  #subscribe .container .content-wrap .content div:nth-child(2) button {
+    padding: 20px 40px;
+    border-radius: 60px;
+  }
+  #subscribe .container .content-wrap .content div:nth-child(2) button a {
+    font-size: 16px;
+  }
+}
 footer .container {
   padding: 40px 0px 20px 0px;
   border-top: 1px solid #e4e4e4;
