--- a/scss/_client-say.scss
+++ b/scss/_client-say.scss
@@ -1,6 +1,8 @@
 /*** Client Say ***/
 #client-say {
-  .container {
+  div {
+    max-width: 335px;
+    margin: auto;
     .heading {
       text-align: start;
       margin-bottom: 30px;
@@ -11,14 +13,14 @@
     }
     .slider-wrap {
       .client-img {
-        max-width: 330px;
-
+        max-width: 310px;
+        
         img {
           max-width: 100%;
         }
       }
       .client-review {
-        margin-bottom: 30px;
+        margin: 30px 0px;
         h5 {
           font-size: 20px;
           font-weight: bold;
@@ -38,7 +40,8 @@
 
 @include media($lg) {
   #client-say {
-    .container {
+    div {
+        max-width: initial;
       .heading {
         text-align: center;
         margin-bottom: 113px;
@@ -51,13 +54,14 @@
         display: flex;
         flex-flow: row wrap;
         align-items: center;
+        margin-left: 107px;
         .client-img {
           max-width: 389px;
         }
         .client-review {
           margin-bottom: 0px;
           width: 412px;
-          margin-right: 50px;
+          margin: 0px 42px 0px 67px;
           h5 {
             font-size: 24px;
             margin-bottom: 21px;
