--- a/scss/style.scss
+++ b/scss/style.scss
@@ -92,6 +92,7 @@ h3{
 }
 
 @import "./header";
+@import "./help-your-business";
 @import "./agency-since";
 @import "./client-say";
 @import "./subscribe";
