--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,118 @@ header main .main-img img {
 #help-your-business {
   margin-top: 50px;
 }
+#help-your-business .container .content .heading {
+  margin-bottom: 30px;
+}
+#help-your-business .container .content .heading h1 {
+  margin-bottom: 15px;
+}
+#help-your-business .container .content .cardset {
+  display: flex;
+  flex-flow: column wrap;
+  row-gap: 20px;
+}
+#help-your-business .container .content .cardset .card {
+  text-align: center;
+  max-width: 280px;
+  height: 320px;
+  padding: 45px 32px 57px 31px;
+  border: 1px solid #f2f2f2;
+  box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.05);
+  border-radius: 30px;
+}
+#help-your-business .container .content .cardset .card .icon-wrap {
+  margin-left: auto;
+  margin-right: auto;
+  width: 80px;
+  height: 80px;
+  border-radius: 15px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+}
+#help-your-business .container .content .cardset .card .icon-wrap img {
+  width: 50px;
+}
+#help-your-business .container .content .cardset .card h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 25px 0px 20px 0px;
+}
+#help-your-business .container .content .cardset .card:nth-child(1) .icon-wrap {
+  background-color: #f4f9ff;
+}
+#help-your-business .container .content .cardset .card:nth-child(2) .icon-wrap {
+  background-color: #fff7e3;
+}
+#help-your-business .container .content .cardset .card:nth-child(3) .icon-wrap {
+  background-color: #fff2f8;
+}
+#help-your-business .container .content .cardset .card:nth-child(4) .icon-wrap {
+  background-color: #deffee;
+}
+
+@media only screen and (min-width: 1440px) {
+  #help-your-business {
+    margin-top: 94px;
+  }
+  #help-your-business .container .content {
+    display: flex;
+    align-items: center;
+    column-gap: 91px;
+  }
+  #help-your-business .container .content .heading {
+    width: 396px;
+    margin-bottom: 0px;
+  }
+  #help-your-business .container .content .heading h1 {
+    margin-bottom: 30px;
+  }
+  #help-your-business .container .content .cardset {
+    flex-flow: row wrap;
+    row-gap: 30px;
+    column-gap: 34px;
+    width: 650px;
+  }
+  #help-your-business .container .content .cardset .card {
+    max-width: 308px;
+    height: 379px;
+    padding: 39px 32px 57px 31px;
+    border-radius: 40px;
+  }
+  #help-your-business .container .content .cardset .card .icon-wrap {
+    width: 121px;
+    height: 121px;
+    border-radius: 20px;
+  }
+  #help-your-business .container .content .cardset .card .icon-wrap img {
+    width: 74px;
+  }
+  #help-your-business .container .content .cardset .card h3 {
+    font-size: 24px;
+    font-weight: bold;
+    margin: 31px 0px 27px 0px;
+  }
+  #help-your-business .container .content .cardset .card:nth-child(1) {
+    margin-top: 80px;
+  }
+  #help-your-business .container .content .cardset .card:nth-child(1) .icon-wrap {
+    background-color: #f4f9ff;
+  }
+  #help-your-business .container .content .cardset .card:nth-child(2) .icon-wrap {
+    background-color: #fff7e3;
+  }
+  #help-your-business .container .content .cardset .card:nth-child(3) .icon-wrap {
+    background-color: #fff2f8;
+  }
+  #help-your-business .container .content .cardset .card:nth-child(4) {
+    margin-top: -80px;
+  }
+  #help-your-business .container .content .cardset .card:nth-child(4) .icon-wrap {
+    background-color: #deffee;
+  }
+}
 /*** Agency Since ***/
 #agency-since {
   padding: 70px 0px;
