--- a/scss/_help-your-business.scss
+++ b/scss/_help-your-business.scss
@@ -1,9 +1,140 @@
 /*** Help your business ***/
-#help-your-business{
-    margin-top: 50px;
-    .container{
-        .content{
-
+#help-your-business {
+  margin-top: 50px;
+  .container {
+    .content {
+      .heading {
+        margin-bottom: 30px;
+        h1 {
+          margin-bottom: 15px;
         }
+      }
+      .cardset {
+        display: flex;
+        flex-flow: column wrap;
+        row-gap: 20px;
+
+        .card {
+          text-align: center;
+          max-width: 280px;
+          height: 320px;
+          padding: 45px 32px 57px 31px;
+          border: 1px solid #f2f2f2;
+          box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.05);
+          border-radius: 30px;
+
+          .icon-wrap {
+            margin-left: auto;
+            margin-right: auto;
+            width: 80px;
+            height: 80px;
+            border-radius: 15px;
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: center;
+            align-items: center;
+
+            img {
+              width: 50px;
+            }
+          }
+          h3 {
+            font-size: 18px;
+            font-weight: bold;
+            margin: 25px 0px 20px 0px;
+          }
+        }
+        .card:nth-child(1) {
+          .icon-wrap {
+            background-color: $thinsky;
+          }
+        }
+        .card:nth-child(2) {
+          .icon-wrap {
+            background-color: $peach;
+          }
+        }
+        .card:nth-child(3) {
+          .icon-wrap {
+            background-color: $thin-pink;
+          }
+        }
+        .card:nth-child(4) {
+          .icon-wrap {
+            background-color: $thin-green;
+          }
+        }
+      }
     }
+  }
+}
+
+@include media($lg) {
+  #help-your-business {
+    margin-top: 94px;
+    .container {
+      .content {
+        display: flex;
+        align-items: center;
+        column-gap: 91px;
+        .heading {
+          width: 396px;
+          margin-bottom: 0px;
+          h1 {
+            margin-bottom: 30px;
+          }
+        }
+        .cardset {
+          flex-flow: row wrap;
+          row-gap: 30px;
+          column-gap: 34px;
+          width: 650px;
+
+          .card {
+            max-width: 308px;
+            height: 379px;
+            padding: 39px 32px 57px 31px;
+            border-radius: 40px;
+
+            .icon-wrap {
+              width: 121px;
+              height: 121px;
+              border-radius: 20px;
+
+              img {
+                width: 74px;
+              }
+            }
+            h3 {
+              font-size: 24px;
+              font-weight: bold;
+              margin: 31px 0px 27px 0px;
+            }
+          }
+          .card:nth-child(1) {
+            margin-top: 80px;
+            .icon-wrap {
+              background-color: $thinsky;
+            }
+          }
+          .card:nth-child(2) {
+            .icon-wrap {
+              background-color: $peach;
+            }
+          }
+          .card:nth-child(3) {
+            .icon-wrap {
+              background-color: $thin-pink;
+            }
+          }
+          .card:nth-child(4) {
+            margin-top: -80px;
+            .icon-wrap {
+              background-color: $thin-green;
+            }
+          }
+        }
+      }
+    }
+  }
 }
